service-mesh/appmesh/create_injector/inject.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: aws-app-mesh-inject
  namespace: appmesh-inject
  labels:
    name: aws-app-mesh-inject
spec:
  ports:
  - name: webhook
    port: 443
    targetPort: 8080
  selector:
    name: aws-app-mesh-inject
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: aws-app-mesh-inject
  namespace: appmesh-inject
  labels:
    name: aws-app-mesh-inject
spec:
  replicas: 1
  template:
    metadata:
      name: aws-app-mesh-inject
      labels:
        name: aws-app-mesh-inject
    spec:
      serviceAccountName: aws-app-mesh-inject-sa
      containers:
        - name: webhook
          image: 602401143452.dkr.ecr.us-west-2.amazonaws.com/amazon/aws-app-mesh-inject:v0.1.0
          imagePullPolicy: Always
          resources:
            limits:
              memory: 500Mi
              cpu: 300m
            requests:
              memory: 500Mi
              cpu: 300m
          volumeMounts:
            - name: webhook-certs
              mountPath: /etc/webhook/certs
              readOnly: true
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
              scheme: HTTPS
            initialDelaySeconds: 1
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
              scheme: HTTPS
            initialDelaySeconds: 5
            periodSeconds: 10
          securityContext:
            readOnlyRootFilesystem: true
      volumes:
        - name: webhook-certs
          secret:
            secretName: aws-app-mesh-inject
---
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  name: aws-app-mesh-inject
webhooks:
  - name: aws-app-mesh-inject.aws.amazon.com
    clientConfig:
      service:
        name: aws-app-mesh-inject
        namespace: appmesh-inject
        path: "/"
      caBundle: "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUN5RENDQWJDZ0F3SUJBZ0lCQURBTkJna3Foa2lHOXcwQkFRc0ZBREFWTVJNd0VRWURWUVFERXdwcmRXSmwKY201bGRHVnpNQjRYRFRFNU1URXhNakV5TWpBMU4xb1hEVEk1TVRFd09URXlNakExTjFvd0ZURVRNQkVHQTFVRQpBeE1LYTNWaVpYSnVaWFJsY3pDQ0FTSXdEUVlKS29aSWh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBSzRJClIzeXZ6eGNRSEJneE96cG14SGRqQzg3VXg4TEk4S1psREVHR2IvbE5KbDBiMGV2VUsvbTNqZG5tdzJDUU9leG8KYzVHV0NWd0ErckJCb3FSblN0ZmZPQWtINTJNMGdoaXlYRzUrY1FyS0Z2MjBEdzFNNFR0NVdFNlhseklSZDREaApHYXVBT1JQVml [...]
    rules:
      - operations: ["CREATE","UPDATE"]
        apiGroups: [""]
        apiVersions: ["v1"]
        resources: ["pods"]
    failurePolicy: Ignore
    namespaceSelector:
      matchLabels:
        appmesh.k8s.aws/sidecarInjectorWebhook: enabled
